[package]
name = "trading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
derive-new = "0.5.9"
openssl = "0.10.55"
polars = { version = "0.31.1", features = ["polars-io", "lazy", "json"]}
polars-core = "0.31.1"
rand = "0.8.5"
rand_distr = "0.4.3"
reqwest = {version = "0.11.18", features = ["blocking", "json"]}
serde = "1.0.163"
serde-aux = "4.2.0"
serde_json = "1.0.103"
serde_yaml = "0.9.21"
thiserror = "1.0.47"
log = "0.4.22"
env_logger = "0.10"
