[project]
name = "trading"
version = "0.1.0"
description = "Basic backtesting application."
authors = [
    {name = "Jack Tobin",email = "tobjack330@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "redis (>=5.2.1,<6.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "dash (>=3.0.0,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "ruff (>=0.11.1,<0.12.0)",
    "flask (<3.1)",
    "maturin (>=1.8.3,<2.0.0)"
]

[tool.poetry.scripts]
start = "app:app.run_server"
format = "black ."
lint = "ruff check ."


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "engine/Cargo.toml"
features = ["pyo3/extension-module"]

